<resources>
    <string name="app_name">Seal</string>

    <string name="timeout"> Превышено время ожидания</string>
    <string name="no_internet">Нет интернета</string>
    <string name="unknown_exception">Непридвиденная ошибка</string>
    <string name="authentication_failed">Авторизация провалена</string>

    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>

    <string name="cafies">Кофейни</string>
    <string name="scan">QR-code</string>
    <string name="account">Профиль</string>

    <string name="coffee">Выпито кофе:</string>
    <string name="count_coffee_default">0/0</string>
    <string name="reset">Сбросить</string>

    <string name="delete_account">Удалить аккаунт</string>
    <string name="logout">Выйти</string>


</resources>