<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/screen_autho">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLoginFrg"
        style="@style/BaseTextView"
        android:text="@string/authorization"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLogin"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/txtLoginFrg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditTxtLogin"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLogin2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditTxtLogin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:hint="@string/login"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/textFieldLogin2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signinBtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:hint="@string/registration"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>